--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,17 @@ body {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media screen and (max-width: 600px) {
+  .movie-grid {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .header {
+    justify-content: center;
+  }
+}
