--- a/src/App.css
+++ b/src/App.css
@@ -114,9 +114,14 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    grid-gap: 0;
   }
 
   .header {
     justify-content: center;
+  }
+
+  .movie-item-card {
+    margin-bottom: 2rem;
   }
 }
