--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,13 @@ body {
 
 .header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   background-color: #373b69;
   padding: 2rem;
+}
+
+.header h1 {
+  font-weight: 400;
 }
 
 .header-search {
@@ -108,6 +112,16 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  .header {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .header h1 {
+    margin-bottom: 1rem;
+  }
+
   .movie-grid {
     width: 90%;
     display: flex;
@@ -115,10 +129,6 @@ body {
     justify-content: center;
     align-items: center;
     grid-gap: 0;
-  }
-
-  .header {
-    justify-content: center;
   }
 
   .movie-item-card {
