--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,23 @@ body {
   margin-right: 0.5rem;
 }
 
+.movie-item-card-vote {
+  background-color: #22254b;
+  padding: 0.5rem;
+}
+
+.movie-item-card-vote-green {
+  color: green;
+}
+
+.movie-item-card-vote-orange {
+  color: orange;
+}
+
+.movie-item-card-vote-red {
+  color: red;
+}
+
 .movie-item-card-overview {
   position: absolute;
   right: 0;
